using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerAnimations 
{
    // Camera animations
    public const string VaultTrigger = "Vault";
    public const string SlidingBool = "Sliding";
    public const string CrouchingBool = "Crouching";
    
    // FPS animations
}
